--- a/index.html
+++ b/index.html
@@ -8,16 +8,43 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <!--Fontawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
-    <div id="app">
+    <div id="app" class="height-full">
 
-        
+        <div class="container height-full">
+            <div class="row height-full justify-content-center">
+                <div class="col-5 height-full">
+                    <div class="card margin-top-10">
+                        <h1 class="text-center">to do list</h1>
+                        <ul class="list-unstyled">
+                            <li v-for="(text, index) in todolist" :class="text.done ? 'crossed' : ''" class="d-flex justify-content-between px-5">
+                                <div>
+                                {{ index}} - 
+                                {{ text.text }}
+                                </div>
+                                <div @click="deleteTask(index)" class="cross"><i class="fa-solid fa-xmark text-danger"></i></div>
+                            </li>
+                        </ul>
+
+                        <div class="d-flex align-items-center justify-content-center my-3">
+
+                            <input type="text" placeholder="Inserisci una nuova task" v-model="todolist.text">
+                            <button class="btn btn-primary btn-sm" @click="addTask()">Aggiungi</button>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
+    <!--JS & VueJS-->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
 
