--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                         <div class="d-flex align-items-center justify-content-center my-3">
 
-                            <input type="text" placeholder="Inserisci una nuova task" v-model="todolist.text">
+                            <input type="text" placeholder="Inserisci una nuova task" v-model="newTaskText">
                             <button class="btn btn-primary btn-sm" @click="addTask()">Aggiungi</button>
 
                         </div>
